--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dimsum:pack": "node dimsum.pack.js",
+    "dimsum:build-pack": "vue-tsc && vite build && node dimsum.pack.js"
   },
   "dependencies": {
     "vue": "^3.4.21",
@@ -14,6 +16,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "archiver": "^7.0.1",
+    "chalk": "^5.3.0",
     "sass": "^1.75.0",
     "typescript": "^4.9.5",
     "vite": "^5.2.0",
