feature: use dimsum-chat cdn

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,11 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "paths": {
+      "https://cdn.jsdelivr.net/npm/dimsum-chat@0/+esm": ["./node_modules/dimsum-chat/dist/index.d.ts"]
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
