--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "dimsum:build-pack": "vue-tsc && vite build && node dimsum.pack.js"
   },
   "dependencies": {
-    "vue": "^3.4.21",
-    "dimsum-chat": "^0.1.5"
+    "vue": "^3.4.21"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
     "archiver": "^7.0.1",
     "chalk": "^5.3.0",
+    "dimsum-chat": "^0.1.6",
     "sass": "^1.75.0",
     "typescript": "^4.9.5",
     "vite": "^5.2.0",
