--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "noFallthroughCasesInSwitch": true,
 
     "paths": {
-      "https://cdn.jsdelivr.net/npm/dimsum-chat@0/+esm": ["./node_modules/dimsum-chat/dist/index.d.ts"]
+      "https://fastly.jsdelivr.net/npm/dimsum-chat@0/+esm": ["./node_modules/dimsum-chat/dist/index.d.ts"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
